# Ditto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bmm_softmax_bmm_ansor.py
benchmark/: bench_all_tvm.py  bench_tvm_utils.py  run.sh  visualizer.py
benchmark/bolt/: .gitignore  bmm_bmm_bolt.py  bmm_softmax_bmm_bolt.py  conv_conv_bolt.py  conv_relu_conv_bolt.py
benchmark/mkl/: MKL2MM.cc  MKL2MM_profile.cc  bmm_bmm_mkl.py  makefile
benchmark/model/: bert_tf1.py  bert_tf2.py  bert_torch.py  capsule_conv_tf.py  capsule_conv_torch.py  utils.py
benchmark/oneDNN/: bmm_bmm.py  bmm_bmm_f32.cpp  bmm_relu_bmm.py  bmm_relu_bmm_f32.cpp  bmm_softmax_bmm.py  bmm_softmax_bmm_f32.cpp  conv_conv.py  conv_conv_f32.cpp  conv_relu_conv.py  conv_relu_conv_f32.cpp  makefile
benchmark/taso/: bmm_bmm.py
benchmark/tensorrt/: bert_inference.py  bmm_bmm.py  bmm_softmax_bmm.py  conv1x1_conv1x1.py  conv1x1_conv3x3.py  conv1x1_relu_conv1x1.py  conv1x1_relu_conv3x3.py  conv3x3_conv1x1.py  conv3x3_relu_conv1x1.py  relay_tensorrt_bert.py  relay_tensorrt_bmm_bmm.py
benchmark/torch_tensorrt/: bmm_bmm_cuda.py  bmm_softmax_bmm_cuda.py
cmake/: googletest.cmake  new_tvm.cmake  tvm.cmake
envs/: ditto_env.sh  tvm_env.sh  vta_env.sh
evaluation/asplos/: chimera_bmm_softmax_bmm_cuda.py  ncu_manual.txt  ncu_memory_analysis_chimera_bmm_softmax_bmm.txt  ncu_memory_analysis_torch_bmm_softmax_bmm.txt  ncu_metrics.txt  ncu_sections.txt  ncu_summary_chimera_bmm_softmax_bmm.txt  ncu_summary_torch_bmm_softmax_bmm.txt  profile_cmd.sh  torch_bmm_softmax_bmm_cuda.py
evaluation/cpu/: bmm_relu_bmm.py
evaluation/micro/: .gitignore
include/: globals.h
include/auto_compute/: api.h  base.h  graph.h  state.h
include/auto_tensorize/: IterGraph.h  analysis.h  api.h  config.h  hyper_fusion.h  intrin_match.h  intrinsic.h  iter_graph.h  pattern.h  state.h
include/autograd/: autograd.h
include/graph/: api.h  base.h  graph.h  node.h  state.h
include/hardware/: hw_model.h
include/hybrid/: driver_api.h  hybrid_schedule.h  hybrid_schedule_pass.h  test.h  tree.h
include/region/: region.h  region_schedule.h  schedule.h
include/runtime/: cuda_graph_runtime.h  graph_runtime.h
include/utils/: fingerprint.h  iter_domain.h  logging.h  unpack_func.h
python/ditto/: __init__.py
python_test/auto_compute/: test_designer.py  test_functional.py  test_graph.py  test_graph_state.py  test_model.py  test_module.py
python_test/auto_schedule/: test_broadcast.py
python_test/auto_tensorize/: .gitignore  parseAndDump.py  profileScript.py  runCommand.py  test_auto_tiling_factor.py  test_cpu_intrin.py  test_fuse_tile_space.py  test_fusion_choice.py  test_hyper_fusion.py  test_hyper_fusion_cpu.py  test_intrinsic_matcher.py  test_iter_graph.py  test_iter_graph_c.py  test_pattern.py  test_single_op_schedule.py
python_test/autograd/: test_grad_graph.py  test_grad_layer.py
python_test/graph/: test_graph.py
python_test/hardware/: test_make_device.py  test_make_nvgpu.py
python_test/hybrid/: test_create_hybrid_schedule.py  test_ditto_lower_for_original_schedule.py  test_original_schedule_function.py  test_reduce.py  test_slice.py  test_test.py
python_test/neoflow/: test_fusion.py
python_test/region/: test_create_region.py  test_create_region_schedule.py  test_create_schedule.py  test_original_schedule_function.py  test_slice.py  test_split.py
python_test/runtime/: lenet_example_log.txt  test_graph_engine.py
python_test/utils/: test_iter_domain.py
src/Slice/: Readme.md
src/auto_compute/: graph.cc  state.cc
src/auto_tensorize/: IterGraph.cc  analysis.cc  api.cc  find_fusion_factors.cc  hyper_fusion.cc  hyper_fusion_cpu.cc  intrin_match.cc  intrinsic.cc  pattern.cc  state.cc
src/autograd/: autograd.cc
src/graph/: graph.cc  node.cc  state.cc
src/hardware/: hw_model.cc
src/hybrid/: auto_inline_elem_wise.cc  bound.cc  build_for_ops.h  driver_api.cc  graph.cc  graph.h  hybrid_schedule.cc  hybrid_schedule_dataflow_rewrite.cc  message_passing.cc  (+4 more)
tutorial/: hyper_fusion_design.md  合作开发指南.md
(+767 files in other folders)
